# mycrypto

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
docs/superpowers/plans/: 2026-04-11-signal-engine-production.md  2026-04-15-performance-memory-quality-audit.md
docs/superpowers/specs/: 2026-04-12-data-pipeline-hardening-design.md  2026-04-15-performance-memory-quality-audit-design.md
src/: error.rs  lib.rs  main.rs
src/auth/: apikey.rs  github.rs  mod.rs  store.rs
src/chat/: command.rs  context.rs  engine.rs  intent.rs  mod.rs  pipeline.rs
src/chat/llm/: claude.rs  copilot.rs  factory.rs  gemini.rs  gradio.rs  mock.rs  mod.rs  openai.rs  openrouter.rs  openrouter_models.rs  provider.rs
src/chat/team/: mod.rs  orchestrator.rs  roles.rs
src/config/: loader.rs  mod.rs  schema.rs
src/data/: aggregator.rs  feed.rs  indicators.rs  mod.rs
src/data/sources/: aggregator.rs  binance.rs  cache.rs  coingecko.rs  cryptopanic.rs  feargreed.rs  finnhub.rs  mod.rs  news_refresh.rs  newsdata.rs  reddit.rs  rss.rs  twitter.rs  yahoo.rs
src/engine/: confluence.rs  executor.rs  mod.rs  risk.rs  scheduler.rs  sentiment.rs  signal_engine.rs  technical.rs
src/paper/: executor.rs  history.rs  mod.rs  simulator.rs
src/state/: app_state.rs  market.rs  mod.rs  portfolio.rs  signal.rs
src/tui/: app.rs  command.rs  input.rs  mod.rs  pages.rs  shell.rs  theme.rs
src/tui/pages/: auth.rs  chart.rs  heatmap.rs  model.rs  news.rs  portfolio.rs  signals.rs  status.rs  team.rs
src/tui/widgets/: autocomplete.rs  logo.rs  mod.rs  model_selector.rs
tests/: gemini_smoke.rs
